Integrated Firebase Realtime Database. When user registers, their account is uploaded to the database. Passwords are in plaintext for now. Re-did side bar and fragments. Got rid of settings toolbar and added settings fragment to side bar.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,14 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.myapp.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_vehicles"
+        android:name="com.example.myapp.ui.vehicles.VehiclesFragment"
+        android:label="Vehicles"
+        tools:layout="@layout/fragment_vehicles" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.myapp.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_settings"
+        android:name="com.example.myapp.ui.settings.SettingsFragment"
+        android:label="Settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
