Update: - Implemented deleting and editing both records and vehicles. - Added the feature to filter records by one vehicle at a time. - Fixed some bugs with theme changing. - Implemented a new window when loading app that check for differences between local and remote data and will notify the user as to which is more current and let the user choose for themselves. - Added a loading screen for when a user logs in and Firebase is getting data to compare to the local data.
(Previous)
Main update is added the feature to save vehicles and records to the local storage and get them displayed on their appropriate pages. Have not made a way to delete/update yet. Also added to where when you access the main pages, the local list of vehicles and records are uploaded to the Firebase Realtime Database for backup purposes. Have not implemented a way to restore data yet, but am planning on making it a feature, not a backend thing, that way teh local save is the master save point of the application.

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,20 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.settings.SettingsFragment">
 
     <Switch
         android:id="@+id/theme_switch"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Dark Mode" />
 
     <Button
-        android:id="@+id/settings_logout_btn2"
-        android:layout_width="match_parent"
+        android:id="@+id/settings_logout_btn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Log Out" />
 </LinearLayout>
