--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -7,51 +7,139 @@
     android:orientation="vertical"
     tools:context=".AddRecord">
 
-    <EditText
-        android:id="@+id/record_title_input"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Title"
-        android:inputType="textPersonName" />
+        android:gravity="center"
+        android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/record_date_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Date of Maintenance"
-        android:inputType="date"
-        android:minHeight="48dp"
-        android:focusable="false"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:focusableInTouchMode="false"/>
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0"
+            android:text="Date of Maintenance:"
+            android:textSize="20sp" />
 
-    <Spinner
-        android:id="@+id/record_vehicle_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp" />
+        <EditText
+            android:id="@+id/record_date_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:ems="10"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:hint="01/01/20"
+            android:inputType="date"
+            android:minHeight="48dp"
+            android:textSize="20sp" />
 
-    <EditText
-        android:id="@+id/record_input_odometer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Odometer Reading"
-        android:inputType="number"
-        android:minHeight="48dp" />
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/record_input_description"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:gravity="start|top"
-        android:hint="Maintenance Description"
-        android:inputType="textMultiLine"
-        android:minHeight="48dp" />
+        android:layout_weight="0"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0"
+            android:text="Title:"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/record_title_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Oil Change"
+            android:inputType="textPersonName"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0"
+            android:text="Vehicle:"
+            android:textSize="20sp" />
+
+        <Spinner
+            android:id="@+id/record_vehicle_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp"
+            android:scrollbarSize="20dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0"
+            android:text="Odometer:"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/record_input_odometer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="123456"
+            android:inputType="number"
+            android:minHeight="48dp"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0"
+            android:text="Description:"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/record_input_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="start|top"
+            android:hint="(Optional)"
+            android:inputType="textMultiLine"
+            android:minHeight="48dp"
+            android:textSize="20sp" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/add_record_btn"
