--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     android:orientation="vertical"
     tools:context=".RegistrationActivity">
 
@@ -11,6 +12,7 @@
         android:id="@+id/register_first_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:ems="10"
         android:hint="First Name"
         android:inputType="textPersonName" />
@@ -19,6 +21,7 @@
         android:id="@+id/register_last_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:ems="10"
         android:hint="Last Name"
         android:inputType="textPersonName"
@@ -28,6 +31,7 @@
         android:id="@+id/register_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -37,6 +41,7 @@
         android:id="@+id/register_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -46,14 +51,17 @@
         android:id="@+id/register_confirm_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:ems="10"
         android:hint="Confirm Password"
         android:inputType="textPassword"
         android:minHeight="48dp" />
 
     <Button
+        android:theme="@style/ButtonTheme"
         android:id="@+id/complete_register_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:text="Finish" />
 </LinearLayout>
