--- a/app/src/main/res/layout/fragment_vehicles.xml
+++ b/app/src/main/res/layout/fragment_vehicles.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.vehicles.VehiclesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layoutAnimation="@anim/layout_animation"
         android:id="@+id/vehicles_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
