--- a/app/src/main/res/layout/popup_compare_databases.xml
+++ b/app/src/main/res/layout/popup_compare_databases.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -11,31 +12,75 @@
         android:id="@+id/popup_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="Local and remote data do not match!"
         android:textSize="24sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/popup_text"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="Details"
-        android:textSize="20sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/record_issue_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="Issue:"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/popup_record_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:text="Details"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/vehicle_issue_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="Issue:"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/popup_vehicle_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:text="Details"
+            android:textSize="20sp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/popup_btn_instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="Please choose which set of data you would like to keep. This will overwrite the other data and is irreversable."
         android:textSize="20sp" />
 
     <LinearLayout
+        android:theme="@style/ButtonTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -44,17 +89,25 @@
             android:id="@+id/popup_local_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:layout_marginRight="5dp"
-            android:layout_weight="1"
             android:text="Local" />
 
         <Button
             android:id="@+id/popup_remote_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:layout_marginLeft="5dp"
-            android:layout_weight="1"
             android:text="Remote" />
     </LinearLayout>
+
+    <Button
+        android:theme="@style/ButtonTheme"
+        android:id="@+id/popout_logout_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="Log Out" />
 
 </LinearLayout>
