--- a/app/src/main/res/layout/vehicle_view.xml
+++ b/app/src/main/res/layout/vehicle_view.xml
@@ -113,7 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:text="Engine Size:"
+            android:text="Engine:"
             android:textSize="20sp" />
 
         <TextView
@@ -142,6 +142,7 @@
             android:id="@+id/vehicle_notes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="(Optional)"
             android:textSize="20sp" />
     </LinearLayout>
 
