--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,15 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/main_categories"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_home_lt"
-            android:title="@string/menu_home" />
+            android:icon="@drawable/ic_wrench_24"
+            android:title="Maintenance" />
         <item
             android:id="@+id/nav_vehicles"
             android:icon="@drawable/ic_menu_car_lt"
             android:title="Vehicles" />
+    </group>
+    <group
+        android:id="@+id/misc_categories"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_settings_lt"
