--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:autofillHints=""
+            android:autofillHints="emailAddress"
             android:ems="10"
             android:hint="Email"
             android:importantForAutofill="yes"
@@ -47,7 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:autofillHints=""
+            android:autofillHints="password"
             android:ems="10"
             android:hint="Password"
             android:importantForAutofill="yes"
